# Wow-Factor

./: .gitignore  .pre-commit-config.yaml  BUILD_BLUEPRINT.md  DEV_LOG.md  DOCUMENTATION.md  LICENSE  MASTER_LOG.md  README.md  pyproject.toml  requirements.txt  wow.py  wowfactor.py
benchmark_results/: results_20250627_133825.json  results_20250627_135134.json  results_20250627_135308.json  results_20250627_135315.json  results_20250627_135321.json  results_20250627_135327.json  results_20250627_135334.json  results_20250627_135340.json  results_20250627_135347.json  results_20250627_135353.json  results_20250627_135359.json  results_20250627_135406.json  results_20250627_135853.json  results_20250627_135859.json  results_20250627_135905.json  results_20250627_135912.json  results_20250627_135918.json  results_20250627_135924.json  results_20250627_135930.json  results_20250627_135936.json  results_20250627_135942.json  results_20250627_135948.json  results_20250627_140549.json  results_20250627_140556.json  results_20250627_140602.json  results_20250627_140608.json  results_20250627_140614.json  results_20250627_140621.json  results_20250627_140627.json  results_20250627_140633.json  results_20250627_140640.json  results_20250627_140646.json  results_20250627_142146.json  results_20250627_142153.json  results_20250627_142159.json  results_20250627_142206.json  results_20250627_142212.json  results_20250627_142218.json  results_20250627_142225.json  results_20250627_142231.json  (+31 more)
core/: analytics_engine.py  benchmark.py  comparator.py  config.py  exceptions.py  exporters.py  logging_config.py  power.py  schema.py  system_deps.py  validation.py
docs/: BUGFIX_SUMMARY.md  CHANGELOG.md  CHARTS_IMPLEMENTATION_PLAN.md  HISTORY.md  IMPLEMENTATION_SUMMARY.md  TESTS_README.md  UI_UX_AUDIT_MANIFEST.md
plans/: ARCHITECTURE_REVIEW_REPORT.md  EXECUTION_PLAN.md  ROADMAP.md  (+8 more)
(+86 files in other folders)
